--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
 
-        <button class="hero-btn container-btn" type="button">Order Service</button>
+        <button class="hero-btn container-btn" type="button" data-modal-open>Order Service</button>
       </div>
       </section>
       <!--endregion hero-->
@@ -421,6 +421,12 @@
     </div>
   </div>
     </footer>
-  
+
+
+
+    <div class="backdrop is-open" data-modal>
+      <div class="modal"></div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
