--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
 
 
 
-    <div class="backdrop is-open" data-modal>
+    <div class="backdrop" data-modal>
       <div class="modal"></div>
     </div>
     <script src="./js/modal.js"></script>
