--- a/index.html
+++ b/index.html
@@ -425,7 +425,11 @@
 
 
     <div class="backdrop" data-modal>
-      <div class="modal"></div>
+      <div class="modal">
+        <button data-modal-close>
+          close
+        </button>
+      </div>
     </div>
     <script src="./js/modal.js"></script>
   </body>
