--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
 
-        <button class="hero-btn container-btn" type="button" data-modal-open>Order Service</button>
+        <button class="hero-btn container-btn" type="button">Order Service</button>
       </div>
       </section>
       <!--endregion hero-->
@@ -426,9 +426,6 @@
 
     <div class="backdrop" data-modal>
       <div class="modal">
-        <button data-modal-close>
-          close
-        </button>
       </div>
     </div>
     <script src="./js/modal.js"></script>
