--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
 
 
 
-    <div class="backdrop is-open" data-modal>
+    <div class="backdrop" data-modal>
       <div class="modal">
         <button class="footer-button" type="button" data-modal-close>
           <svg class="footer-social-btn" width="8" height="8">
