--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
 
-        <button class="hero-btn container-btn" type="button" data-modal-open>Order Service</button>
+        <button class="hero-btn container-btn" type="button">Order Service</button>
       </div>
       </section>
       <!--endregion hero-->
@@ -419,23 +419,21 @@
         </li>
       </ul>
     </div>
+
+
+
     <div class="social-subscribe">
       <p class="social-clause">
-        Subscribe
-      </p>
-      <form class="social-form">
-        <label class="social-form-style">
+        Subscribe</p>
+      <form class="social-form" autocomplete="off">
+        <label class="social-form-style" for="subscribe-form">
+          <input class="social-form-email" id="subscribe-form" type="email" name="emeil" placeholder="E-mail">
         </label>
-        <div>
-          <input class="social-form-email" type="email" name="form" placeholder="E-mail">
-        </div>
-
-        <button class="social-form-bth" type="submit">
-          <svg>
+        <button class="social-form-bth" width="24" height="24" type="submit">Subscribe
+          <svg class="social-class-bth">
             <use href="./images/icons2.svg#icon-send">
             </use>
           </svg>
-          Subscribe
         </button>
 
       
@@ -446,7 +444,7 @@
 
 
 
-    <div class="backdrop" data-modal>
+    <div class="modal-backdrop">
       <div class="modal">
         <button class="footer-button" type="button" data-modal-close>
           <svg class="footer-social-btn" width="8" height="8">
@@ -455,53 +453,53 @@
         </button>
         <p class="footer-page">Leave your contacts and we will call you back
         </p>
-        <div class="modal-element" bis_skin_checked="1">
+        <form>
+        <div class="modal-element">
           <label class="name" for="user-name">Name</label>
-    <div class="input-wrap" bis_skin_checked="1">
-            <input class="element-modal" type="text" name="user-name" id="user-name" placeholder="Іван Іванович">
+    <div class="input-wrap">
+            <input class="element-modal" type="text" name="user-name" id="user-name" required>
            <svg class="element-class" width="18" height="24">
           <use href="./images/icons2.svg#icon-person"></use>
           </svg>
           </div>
     </div>
-    <div class="modal-element" bis_skin_checked="1">
+    <div class="modal-element">
       <label class="name" for="user-name">Phone</label>
-<div class="input-wrap" bis_skin_checked="1">
-        <input class="element-modal" type="text" name="user-name" id="user-name" placeholder="Іван Іванович">
+<div class="input-wrap">
+        <input class="element-modal" type="text" name="user-name" id="user-name">
        <svg class="element-class" width="18" height="24">
       <use href="./images/icons2.svg#icon-phone"></use>
       </svg>
       </div>
 </div>
-<div class="modal-element" bis_skin_checked="1">
+<div class="modal-element">
   <label class="name" for="user-name">Email</label>
-<div class="input-wrap" bis_skin_checked="1">
-    <input class="element-modal" type="text" name="user-name" id="user-name" placeholder="Іван Іванович">
+<div class="input-wrap">
+    <input class="element-modal" type="text" name="user-name" id="user-name">
    <svg class="element-class" width="18" height="24">
   <use href="./images/icons2.svg#icon-email"></use>
   </svg>
   </div>
 </div>
-<div class="comment-element" bis_skin_checked="1">
+<div class="comment-element">
   <label class="name" for="user-comment">Comment</label>
-  <textarea class="comment-element-wrap" id="user-comment"  name="user-comment" placeholder="Text input"></textarea>
+  <textarea class="comment-element-wrap" id="user-comment"  name="user-comment" placeholder="Text input" required></textarea>
   </div>
-  <div class="comment-accept" bis_skin_checked="1">
-    <input class="element-accept" id="user-privacy" type="checkbox"  value="true" name="user-privacy" > 
-    <label class="name-accept" for="user-privacy">I accept the terms and conditions of the
-      <a class="logo-accept" href="./index.html">
-        <span class="logo-accept-part">Privacy Policy</span></a>
-      <span class="span-accept"  width="16px"  height="16px">
-        <svg class="class-accept"  width="10" height="8">
-          <use href="./images/icons2.svg#icon-check">
-          </use>
-        </svg>
+  <div class="comment-accept">
+    <input class="element-accept-checkbox visually-hidden" id="user-privacy" type="checkbox"  value="true" name="user-privacy" > 
+    <label class="name-accept" for="user-privacy">
+      <span class="span-accept">
+      <svg class="class-accept"  width="10" height="8">
+        <use href="./images/icons2.svg#icon-check">
+        </use>
+      </svg>
     </span>
+    I accept the terms and conditions of the
+    <a class="logo-accept" href="#">Privacy Policy</a>
   </label>
 </div>
-<button class="modal-bth">Send</button>
-      </div>
+<button class="modal-bth" type="submit">Send</button>
+        </form>
     </div>
-    <script src="./js/modal.js"></script>
   </body>
 </html>
