--- a/index.html
+++ b/index.html
@@ -429,14 +429,12 @@
         <label class="social-form-style" for="subscribe-form">
           <input class="social-form-email" id="subscribe-form" type="email" name="emeil" placeholder="E-mail">
         </label>
-        <button class="social-form-bth" width="24" height="24" type="submit">Subscribe
+        <button class="social-form-bth" type="submit">Subscribe
           <svg class="social-class-bth">
             <use href="./images/icons2.svg#icon-send">
             </use>
           </svg>
         </button>
-
-      
       </form>
     </div>
   </div>
@@ -457,7 +455,7 @@
         <div class="modal-element">
           <label class="name" for="user-name">Name</label>
     <div class="input-wrap">
-            <input class="element-modal" type="text" name="user-name" id="user-name" required>
+            <input class="element-modal" type="text" name="name" id="user-name" required>
            <svg class="element-class" width="18" height="24">
           <use href="./images/icons2.svg#icon-person"></use>
           </svg>
@@ -466,7 +464,7 @@
     <div class="modal-element">
       <label class="name" for="user-name">Phone</label>
 <div class="input-wrap">
-        <input class="element-modal" type="text" name="user-name" id="user-name">
+        <input class="element-modal" type="text" name="name">
        <svg class="element-class" width="18" height="24">
       <use href="./images/icons2.svg#icon-phone"></use>
       </svg>
@@ -475,7 +473,7 @@
 <div class="modal-element">
   <label class="name" for="user-name">Email</label>
 <div class="input-wrap">
-    <input class="element-modal" type="text" name="user-name" id="user-name">
+    <input class="element-modal" type="text" name="name">
    <svg class="element-class" width="18" height="24">
   <use href="./images/icons2.svg#icon-email"></use>
   </svg>
@@ -483,7 +481,7 @@
 </div>
 <div class="comment-element">
   <label class="name" for="user-comment">Comment</label>
-  <textarea class="comment-element-wrap" id="user-comment"  name="user-comment" placeholder="Text input" required></textarea>
+  <textarea class="comment-element-wrap" id="user-comment"  name="comment" placeholder="Text input" required></textarea>
   </div>
   <div class="comment-accept">
     <input class="element-accept-checkbox visually-hidden" id="user-privacy" type="checkbox"  value="true" name="user-privacy" > 
@@ -495,11 +493,9 @@
       </svg>
     </span>
     I accept the terms and conditions of the
-    <a class="logo-accept" href="#">Privacy Policy</a>
-  </label>
-</div>
-<button class="modal-bth" type="submit">Send</button>
+    <a class="logo-accept" href="#">Privacy Policy</a></label></div><button class="modal-bth" type="submit">Send</button>
         </form>
+      </div>
     </div>
   </body>
 </html>
