--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
           <input class="social-form-email" id="subscribe-form" type="email" name="emeil" placeholder="E-mail">
         </label>
         <button class="social-form-bth" type="submit">Subscribe
-          <svg class="social-class-bth">
+          <svg class="social-class-bth" width="24" height="24" >
             <use href="./images/icons2.svg#icon-send">
             </use>
           </svg>
@@ -442,7 +442,7 @@
 
 
 
-    <div class="modal-backdrop">
+    <div class="modal-backdrop is-open">
       <div class="modal">
         <button class="footer-button" type="button" data-modal-close>
           <svg class="footer-social-btn" width="8" height="8">
@@ -455,7 +455,7 @@
         <div class="modal-element">
           <label class="name" for="user-name">Name</label>
     <div class="input-wrap">
-            <input class="element-modal" type="text" name="name" id="user-name" required>
+            <input class="element-modal" type="text" name="user-name" id="user-name" required>
            <svg class="element-class" width="18" height="24">
           <use href="./images/icons2.svg#icon-person"></use>
           </svg>
@@ -464,7 +464,7 @@
     <div class="modal-element">
       <label class="name" for="user-name">Phone</label>
 <div class="input-wrap">
-        <input class="element-modal" type="text" name="name">
+        <input class="element-modal" type="text" name="user-name">
        <svg class="element-class" width="18" height="24">
       <use href="./images/icons2.svg#icon-phone"></use>
       </svg>
@@ -473,7 +473,7 @@
 <div class="modal-element">
   <label class="name" for="user-name">Email</label>
 <div class="input-wrap">
-    <input class="element-modal" type="text" name="name">
+    <input class="element-modal" type="text" name="user-name">
    <svg class="element-class" width="18" height="24">
   <use href="./images/icons2.svg#icon-email"></use>
   </svg>
@@ -481,11 +481,11 @@
 </div>
 <div class="comment-element">
   <label class="name" for="user-comment">Comment</label>
-  <textarea class="comment-element-wrap" id="user-comment"  name="comment" placeholder="Text input" required></textarea>
+  <textarea class="comment-element-wrap" id="user-comment"  name="user-comment" placeholder="Text input" required></textarea>
   </div>
   <div class="comment-accept">
     <input class="element-accept-checkbox visually-hidden" id="user-privacy" type="checkbox"  value="true" name="user-privacy" > 
-    <label class="name-accept" for="user-privacy">
+    <label class="name-accept-checkbox-label" for="user-privacy">
       <span class="span-accept">
       <svg class="class-accept"  width="10" height="8">
         <use href="./images/icons2.svg#icon-check">
