--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
     <div class="modal-element">
       <label class="name" for="user-name">Phone</label>
 <div class="input-wrap">
-        <input class="element-modal" type="text" name="user-name">
+        <input class="element-modal" type="text" name="user-name" id="user-name" required>
        <svg class="element-class" width="18" height="24">
       <use href="./images/icons2.svg#icon-phone"></use>
       </svg>
@@ -473,7 +473,7 @@
 <div class="modal-element">
   <label class="name" for="user-name">Email</label>
 <div class="input-wrap">
-    <input class="element-modal" type="text" name="user-name">
+    <input class="element-modal" type="text" name="user-name" id="user-name" required>
    <svg class="element-class" width="18" height="24">
   <use href="./images/icons2.svg#icon-email"></use>
   </svg>
@@ -481,7 +481,7 @@
 </div>
 <div class="comment-element">
   <label class="name" for="user-comment">Comment</label>
-  <textarea class="comment-element-wrap" id="user-comment"  name="user-comment" placeholder="Text input" required></textarea>
+  <textarea id="user-comment"  name="user-comment" placeholder="Text input" class="comment-element-wrap" required></textarea>
   </div>
   <div class="comment-accept">
     <input class="element-accept-checkbox visually-hidden" id="user-privacy" type="checkbox"  value="true" name="user-privacy" > 
