--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
 
 
 
-    <div class="modal-backdrop is-open">
+    <div class="modal-backdrop">
       <div class="modal">
         <button class="footer-button" type="button" data-modal-close>
           <svg class="footer-social-btn" width="8" height="8">
