--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
     <div class="modal-element">
       <label class="name" for="user-name">Phone</label>
 <div class="input-wrap">
-        <input class="element-modal" type="text" name="user-name" id="user-name" required>
+        <input class="element-modal" type="text" name="user-phone" id="user-phone" required>
        <svg class="element-class" width="18" height="24">
       <use href="./images/icons2.svg#icon-phone"></use>
       </svg>
@@ -473,7 +473,7 @@
 <div class="modal-element">
   <label class="name" for="user-name">Email</label>
 <div class="input-wrap">
-    <input class="element-modal" type="text" name="user-name" id="user-name" required>
+    <input class="element-modal" type="text" name="user-email" id="user-email" required>
    <svg class="element-class" width="18" height="24">
   <use href="./images/icons2.svg#icon-email"></use>
   </svg>
