--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
 </div>
 <div class="comment-element">
   <label class="name" for="user-comment">Comment</label>
-  <textarea id="user-comment"  name="user-comment" placeholder="Text input" class="comment-element-wrap" required></textarea>
+  <textarea class="comment-element-wrap" id="user-comment"  name="user-comment" placeholder="Text input" required></textarea>
   </div>
   <div class="comment-accept">
     <input class="element-accept-checkbox visually-hidden" id="user-privacy" type="checkbox"  value="true" name="user-privacy" > 
